# distill-rss

./: .env.example  .gitignore  AGENTS.md  README.md  config.json  fetch_help.py  history.json  pyproject.toml  rss_reader.py  todos.md
distill_rss/: __init__.py  ai.py  constants.py  fetcher.py  mcp_tools.py  models.py  persistence.py  report.py
docs/: MCP.md
tests/: conftest.py  test_ai.py  test_fetcher.py  test_mcp_tools.py  test_models.py  test_persistence.py  test_report.py
